--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "bootstrap": "^4.1.3",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
     "moment": "2.18.1",
