--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.1.3",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "moment": "2.18.1",
     "popper.js": "^1.14.5",
