--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
-    "moment": "2.18.1",
+    "moment": ">=2.19.3",
     "popper.js": "^1.14.5",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
@@ -47,6 +47,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "moment": ">=2.19.3",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6"
